8222128: [lworld] Assertion failure in ci with flattenable non-flattened field inside a flattened field

Reviewed-by: roland, dsimms